<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MauIni</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logIn">Log In</string>
    <string name="title_activity_slider">SliderActivity</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="name">mau-ini</string>
    <string name="title_activity_add_product">AddProduct</string>
    <string name="product_name">Product Name</string>
    <string name="actual_price">Actual Price</string>
    <string name="selling_price">Selling Price</string>
    <string name="add_product">Add Product</string>
    <string name="product_desc">Description</string>
    <string name="add_photo">Add Photo</string>
    <string name="title_activity_result">Result</string>
    <string name="exit">Exit</string>
    <string name="product_added">Product added</string>
    <string name="new_product">Wanna add more?</string>

</resources>
