<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="@drawable/back2"
    tools:context="com.example.mauini.Result" >

    <LinearLayout
        android:id="@+id/UsernameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp" >
        
	    <TextView
	        android:id="@+id/productAddedTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="30dp"
	        android:text="@string/product_added"
	        android:textColor="@color/grey"
	        android:textSize="30sp" />
    
    </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/newProductLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp" >
	    <TextView
	        android:id="@+id/newProductTextView"
	        android:layout_marginLeft="30dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/grey"
	        android:textSize="30sp"
	        android:text="@string/new_product" />
	    
	    </LinearLayout>

    <Button
		    android:id="@+id/AddAgainButton"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:layout_marginTop="30dp"
		    android:background="@drawable/flat_selector"
		    android:text="@string/add_product"
		    android:textSize="24sp"
		    android:textColor="@color/white" />
    
    <Button
		    android:id="@+id/ExitButton"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:layout_marginTop="30dp"
		    android:background="@drawable/flat_selector"
		    android:text="@string/exit"
		    android:textSize="24sp"
		    android:textColor="@color/white" />
    
    
    
</LinearLayout>
