<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    tools:context="com.example.mauini.AddProduct" >

	<LinearLayout 
	    android:id="@+id/MainLinearLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
		android:background="@drawable/back2"
	    tools:context="com.example.mauini.AddProduct" >
	    
	    <LinearLayout
	    android:id="@+id/ImageLinearLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="15dp"
	    android:layout_marginLeft="10dp" >        
	    
	        <ImageView
	            android:id="@+id/productImageView"
	            android:layout_width="132dp"
	            android:layout_height="110dp"            
	            android:contentDescription="@string/hello_world"
	            android:src="@drawable/camera" />
	        
	        <ImageView
	            android:id="@+id/galleryImageView"
	            android:layout_width="132dp"
	            android:layout_height="110dp"
	            android:layout_marginLeft="30dp"
	            android:contentDescription="@string/hello_world"
	            android:src="@drawable/gallery" />
	        
	    </LinearLayout>
	    
	    
	
	        
	        
	   	
	    
	    <LinearLayout
	        android:id="@+id/ProductNameLinearLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"        
	        android:orientation="horizontal"
	        android:paddingLeft="20dp"
        	android:paddingRight="20dp" >
	
	        <EditText
	            android:id="@+id/productNameEditText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:hint="@string/product_name"
	            android:textColor="@color/white"
	            android:textColorHint="@color/grey"
	            android:textSize="20sp" />
	        
	   	</LinearLayout>
	    
	     <LinearLayout
	        android:id="@+id/ActualPriceLinearLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"        
	        android:orientation="horizontal"
	        android:paddingLeft="20dp"
        	android:paddingRight="20dp" >
	
	        <EditText
	            android:id="@+id/actualPriceEditText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:inputType="number"
	            android:hint="@string/actual_price"
	            android:textColor="@color/white"            
	            android:textColorHint="@color/grey"
	            android:textSize="20sp" />
	        
	   	</LinearLayout>
	   	
	     <LinearLayout
	        android:id="@+id/SellingPriceLinearLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"        
	        android:orientation="horizontal"
	        android:paddingLeft="20dp"
        	android:paddingRight="20dp" >
	
	        <EditText
	            android:id="@+id/sellingPriceEditText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:inputType="number"
	            android:hint="@string/selling_price"
	            android:textColor="@color/white"            
	            android:textColorHint="@color/grey"
	            android:textSize="20sp" />
	        
	   	</LinearLayout>
	   	
	     <LinearLayout
	        android:id="@+id/ProductDescLinearLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"        
	        android:orientation="horizontal"
	        android:paddingLeft="20dp"
        	android:paddingRight="20dp" >         
	         
	         <EditText
	            android:id="@+id/productDescEditText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:hint="@string/product_desc"
	            android:textColor="@color/white"
	            android:textColorHint="@color/grey"
	            android:inputType="textMultiLine"
	            
	            android:textSize="20sp" />
	        
	   	</LinearLayout>
	   	
	     <LinearLayout
	        android:id="@+id/CategoryLinearLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"        
	        android:orientation="horizontal" >
	         
	         // List	        	         
	         
	     </LinearLayout>
	   	
	     
	
	     <LinearLayout
	        android:id="@+id/AddProductLinearLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"        
	        android:orientation="horizontal"
	        android:paddingLeft="20dp"
        	android:paddingRight="20dp" >
	     	
	     	<Button
	        	 android:id="@+id/addProductButton"
	         	android:layout_width="match_parent"
	         	android:layout_height="wrap_content"
	         	android:background="@drawable/flat_selector"
	         	android:text="@string/add_product"
	         	android:layout_marginTop="20dp" />
	     	
	    </LinearLayout>	     
	     
	</LinearLayout>
</ScrollView>