<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back2"
    tools:context="com.example.mauini.SliderActivity" >
    
    <LinearLayout
        android:id="@+id/LogoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon49" />

   	</LinearLayout>
   	
    <LinearLayout
        android:id="@+id/NameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp" />
        
   	</LinearLayout>
   	

    
    <LinearLayout
        android:id="@+id/UsernameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
			android:textColorHint="@color/grey"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:hint="@string/username" >

            <requestFocus />
        </EditText>
    
    </LinearLayout>
    
    <LinearLayout 
    android:id="@+id/PasswordLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="26sp" >

        </EditText>
    
    </LinearLayout>
    
    <LinearLayout 
    android:id="@+id/LogInLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

		<Button
		    android:id="@+id/logInButton"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:layout_marginTop="30dp"
		    android:background="@drawable/flat_selector"
		    android:text="@string/logIn"
		    android:textSize="24sp"
		    android:textColor="@color/white" />
    
    </LinearLayout>

   

</LinearLayout>
